# study

gamecrash/: CMakeLists.txt  README.md
gamecrash/src/: ClientUI.cpp  GameBackgroud.cpp  GameCloud.cpp  GameCloudsManager.cpp  GameCrashConfig.h.in  main.cpp  sqrt.cpp
gamecrash/src/include/: ClientUI.h  GameBackground.h  GameCloud.h  GameCloudsManager.h  GameSetting.h
gamecrash/tests/: sqrt_tests.cpp  tuple_tests.cpp
learnopengl/tests/: sqrt_tests.cpp
